# nbockisch.net

./: .gitignore  Cargo.toml  README.md  index.html  notes
src/: main.rs
src/components/: about.rs  description.rs  experience.rs  links.rs  mod.rs  skills.rs  theme_selector.rs
src/styles/: attributes.scss  base.scss  colors.scss  components.scss  fonts.scss  styles.scss  variables.scss
